# Pacioli

./: .clinerules  .env  .env.example  .repository-split-plan-completed.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT_RESET_SUMMARY.md  CONTRIBUTING.md  INDEXEDDB_IMPLEMENTATION_COMPLETE.md  README.md  SECURITY.md  TRANSACTION_RETRIEVAL_STATUS.md  TYPE_SYSTEM_SUMMARY.md  WALLET_CONNECTION_PLAN.md  WALLET_INTEGRATION_GUIDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
migrations/: 001_wallet_system_schema.sql  SCHEMA_CHANGES.md
scripts/: README.md  convert-excel-to-json.cjs  dev-helper.sh  setup-repos.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20250101000008_add_currency_conversion_to_transactions.sql  20250102000001_create_gl_accounts.sql  20250102000002_create_chains_and_tokens.sql  20250102000003_create_journal_entries.sql  20250102000004_create_cost_basis_tracking.sql  20250102000005_create_accounting_views.sql  20251213000001_create_persistence_tables.sql  20251214000001_create_entities.sql  20251215000001_create_auth_tables.sql  20251216000001_add_wallet_auth.sql  20251228000001_extend_user_profile.sql  20251228000002_add_company_field.sql  20251228100001_create_email_change_requests.sql  20260118000001_multi_chain_transactions.sql  20260126000001_add_offline_storage.sql  20260214000001_fix_transactions_view_null_comparison.sql  20260222000001_add_solana_wallet_type.sql  20260326000001_add_classification_and_seed_accounts.sql
src-tauri/src/: lib.rs
src-tauri/src/api/: accounting.rs  auth.rs  backup.rs  entities.rs  export.rs  mod.rs  persistence.rs  prices.rs  wallet_auth.rs
src-tauri/src/api/price_feeds/: coingecko.rs  fixer.rs  mod.rs
src-tauri/src/chains/: commands.rs  mod.rs
src-tauri/src/chains/bitcoin/: mempool.rs  mod.rs  types.rs  xpub.rs
src-tauri/src/chains/evm/: alchemy.rs  config.rs  etherscan.rs  mod.rs  types.rs
src-tauri/src/chains/solana/: helius.rs  mod.rs  rpc.rs  types.rs
src-tauri/src/chains/substrate/: mod.rs
src-tauri/src/core/: address.rs  auth_helpers.rs  auth_state.rs  currency.rs  currency_service.rs  email.rs  encryption.rs  mod.rs  substrate_currency.rs
src-tauri/src/db/: mod.rs  multi_chain.rs  transactions.rs
src-tauri/src/evm_indexer/: defi.rs  erc20.rs  mod.rs
src-tauri/src/fetchers/: api_keys.rs  commands.rs  mod.rs
src-tauri/src/indexer/: mod.rs
src-tauri/src/storage/: bip39.rs  commands.rs  db_security.rs  encryption.rs  export.rs  import.rs  initialization.rs  mod.rs  profile_store.rs  settings_store.rs  wallet_store.rs
src-tauri/src/sync/: mod.rs
src/api/: chains.ts  index.ts
src/components/: GridSelectionButton.tsx
src/constants/: countries.ts  currencies.ts  index.ts
src/contexts/: AppContext.tsx  AuthContext.tsx  CurrencyContext.tsx  EntityContext.tsx  LanguageContext.tsx  NavBadgeContext.tsx  NotificationContext.tsx  OrganizationContext.tsx  ProfileContext.tsx  ThemeContext.tsx  TokenContext.tsx  TransactionContext.tsx  (+1 more)
(+135 files in other folders)
