[package]
name = "pacioli"
version = "0.1.0"
description = "Open-source crypto accounting platform for Polkadot ecosystem"
authors = ["you"]
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pacioli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum/EVM dependencies
ethers = { version = "2.0", features = ["ws", "rustls"] }
web3 = "0.19"
ethabi = "18.0"
hex = "0.4"
rlp = "0.5"
ethereum-types = "0.14"
keccak-hash = "0.10"
sha3 = "0.10"
sha2 = "0.10"
secp256k1 = { version = "0.29", features = ["recovery", "rand"] }

# Additional dependencies for the indexer
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
rust_decimal = { version = "1.35", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
ulid = { version = "1.1", features = ["serde"] }

# Substrate dependencies
sp-core = { version = "21.0", default-features = false, features = ["std"] }
subxt = "0.35"

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate", "json"] }

# File handling dependencies
csv = "1.3"

# Encryption dependencies
aes-gcm = "0.10"

# Authentication dependencies
argon2 = "0.5"              # Password hashing (Argon2id)
jsonwebtoken = "9"          # JWT creation and validation
rand = "0.8"                # Secure random generation
base64 = "0.22"             # Token encoding

# Email dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"            # Environment variable loading

# Chain adapter dependencies
async-trait = "0.1"         # Async trait support
thiserror = "1.0"           # Error derive macros
alloy-primitives = "0.5"    # EVM address validation and primitives
tauri-plugin-dialog = "2.6.0"

# Resilient fetcher dependencies (Phase 1)
governor = "0.6"            # GCRA rate limiting (leaky bucket)
reqwest-middleware = "0.4"  # HTTP client middleware
reqwest-retry = "0.7"       # Exponential backoff retry middleware
keyring = "3"               # Secure OS keychain for API keys
nonzero_ext = "0.3"         # NonZero integer macros

# Bitcoin xPub derivation (Phase 5)
bitcoin = { version = "0.32", features = ["std", "secp-recovery"] }
bs58 = { version = "0.5", features = ["check"] }

[dev-dependencies]
tempfile = "3"              # Temporary files/directories for tests

